# ops-memorybench

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  handoff.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: memory_seed.yaml
benchmarks/tasks/: 01_reschedule_1on1.yaml  02_announce_launch.yaml  03_meeting_notes_template.yaml  04_invite_approver.yaml  05_name_document.yaml  06_prior_decision.yaml  07_vip_contact.yaml  08_travel_itinerary.yaml  09_external_call_timezone.yaml  10_weekly_summary.yaml  11_route_request.yaml  12_dm_or_public.yaml  13_update_project_page.yaml  14_triage_decline.yaml  15_follow_up_after_failure.yaml
docs/: architecture.md  bitemporal.md  eval-protocol.md  extensions.md  integrations-gmail.md  memory-model.md  trajectory-format.md
docs/diagrams/: architecture.puml  backtest.puml  bitemporal.puml  layers.puml
examples/: backtest.html  demo_output.txt
fixtures/gcal/: calendar.json
fixtures/gdocs/: docs.json
fixtures/gmail/: mailbox.json
fixtures/slack/: workspace.json
fixtures/trajectories/: claude_code_reschedule.jsonl  codex_announce.json
notebooks/: benchmark_mining.ipynb  error_analysis.ipynb
plugin/ombench-capture/: README.md
plugin/ombench-capture/.claude-plugin/: plugin.json
plugin/ombench-capture/hooks/: hooks.json
scripts/: demo.sh
src/ombench/: __init__.py  config.py  ids.py  logging.py  timeutil.py
tests/: conftest.py
tests/integration/: test_backtest.py  test_benchmark_suite.py  test_bootstrap.py  test_cli_coverage.py  test_compiler.py  test_demo_cli.py  test_event_log_integration.py  test_saasgit_cli.py  test_sandbox_replay.py  test_snapshot_e2e.py  test_viz_integration.py
tests/unit/: test_agent.py  test_blobstore.py  test_blobstore_properties.py  test_bm25.py  test_candidate_extractor.py  test_cli_smoke.py  test_config.py  test_converters.py  test_embeddings.py  test_event_schema.py  test_event_store.py  test_faults.py  test_gcal_sync.py  test_gdocs_sync.py  test_gmail_sync.py  test_hook_capture.py  test_ids.py  test_integration_base.py  test_judges.py  test_llm_factory.py  test_memory_extensions.py  test_memory_kb.py  test_miner.py  test_otel_adapter.py  test_postgres_backend.py  test_redact.py  test_registry.py  test_reports.py  test_resolver.py  test_retriever.py  test_rubrics.py  test_sandbox_api.py  test_sandbox_base.py  test_scorer.py  test_slack_sync.py  test_snapshots.py  test_stats.py  test_storage_backend.py  test_stub_llm.py  test_tasks.py  (+5 more)
(+95 files in other folders)
